--- a/templates/myapp/base.html
+++ b/templates/myapp/base.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 
-  <link rel="stylesheet" href="{% static 'myapp/css/dashboard.css' %}">
+  <link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
   <link rel="stylesheet" href="{% static 'myapp/css/login.css' %}">
   <link rel="stylesheet" href="{% static 'myapp/css/about.css' %}">
   <link rel="stylesheet" href="{% static 'myapp/css/contact.css' %}">
