Ignore collected static files (staticfiles/)

--- a/templates/myapp/base.html
+++ b/templates/myapp/base.html
@@ -21,10 +21,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 
-  <link rel="stylesheet" href="{% static 'bellapp/css/dashboard.css' %}">
-  <link rel="stylesheet" href="{% static 'bellapp/css/login.css' %}">
-  <link rel="stylesheet" href="{% static 'bellapp/css/about.css' %}">
-  <link rel="stylesheet" href="{% static 'bellapp/css/contact.css' %}">
+<link rel="stylesheet" href="{% static 'myapp/css/dashboard.css' %}">
+<link rel="stylesheet" href="{% static 'myapp/css/login.css' %}">
+<link rel="stylesheet" href="{% static 'myapp/css/about.css' %}">
+<link rel="stylesheet" href="{% static 'myapp/css/contact.css' %}">
 
   <style>
     body{
